k8s/platform/cicd/tekton/config/pipelinesascode/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pac
  namespace: tekton
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gw
      namespace: gateway
      sectionName: https
  hostnames:
    - pac.k8s.u74n.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pipelines-as-code-controller
          port: 8080
          weight: 1
